syntax = "proto3";

option java_package = "org.example.grpc";
option java_outer_classname = "ExampleProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
